examples/dcm/slurm-60472957.out
Resolved 270 packages in 2ms
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jedi-0.19.2.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/termcolor-3.2.0.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/threadpoolctl-3.6.0.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/toml-0.10.2.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/torch-2.9.0.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/torchani-2.2.4.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/tornado-6.5.2.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/traitlets-5.14.3.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/traittypes-0.2.3.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/triton-3.5.0.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/typing_inspection-0.4.2.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/uncertainties-3.2.3.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/urllib3-2.5.0.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/vasprun_xml-1.0.4.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/wandb-0.22.3.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/wcwidth-0.2.14.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/werkzeug-3.1.3.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/wheel-0.45.1.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/widgetsnbextension-4.0.14.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/wrapt-2.0.0.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/xarray-2025.10.1.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
warning: Failed to uninstall package at /scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/xmltodict-1.0.2.dist-info due to missing `RECORD` file. Installation may result in an incomplete environment.
Uninstalled 170 packages in 3m 41s
 - alembic==1.17.1
 - annotated-types==0.7.0
 - argcomplete==3.6.3
 - argparse==1.4.0
 - asciichartpy==1.5.25
 - asttokens==3.0.0
 - astunparse==1.6.3
 - autopage==0.5.2
 - basis-set-exchange==0.11
 - bibtexparser==1.4.3
 - bqplot==0.12.45
 - certifi==2025.10.5
 - charset-normalizer==3.4.4
 - chemcoord==2.1.2
 - click==8.3.0
 - cliff==4.11.0
 - cmaes==0.12.0
 - cmcrameri==1.9
 - cmd2==2.7.0
 - colorlog==6.10.1
 - comm==0.2.3
 - cramjam==2.11.0
 - debugpy==1.8.17
 - decorator==5.2.1
 - deepsmiles==1.0.1
 - descriptastorus==2.8.0
 - dscribe==2.1.2
 - executing==2.2.1
 - fastcore==1.8.14
 - fastjsonschema==2.21.2
 - fastparquet==2024.11.0
 - filelock==3.20.0
 - flask==0.11.1
 - flatbuffers==25.9.23
 - gast==0.6.0
 - geometric==1.1
 - gitdb==4.0.12
 - gitpython==3.1.45
 - google-pasta==0.2.0
 - gpu4pyscf-cuda12x==1.4.3
 - gpu4pyscf-libxc-cuda12x==0.5
 - greenlet==3.2.4
 - griddataformats==1.0.2
 - grpcio==1.76.0
 - h5py==3.15.1
 - hydra-optuna-sweeper==1.2.0
 - idna==3.11
 - importlib-metadata==8.7.0
 - ipydatawidgets==4.3.5
 - ipykernel==7.1.0
 - ipython==9.6.0
 - ipython-pygments-lexers==1.1.1
 - ipyvolume==0.6.3
 - ipyvue==1.11.3
 - ipyvuetify==1.11.3
 - ipywebrtc==0.6.0
 - ipywidgets==8.1.7
 - itsdangerous==2.2.0
 - jedi==0.19.2
 - jinja2==3.1.6
 - joblib==1.5.2
 - jsonschema==4.25.1
 - jsonschema-specifications==2025.9.1
 - jupyter-client==8.6.3
 - jupyter-core==5.9.1
 - jupyterlab-widgets==3.0.15
 - keras==3.12.0
 - lark-parser==0.12.0
 - libclang==18.1.1
 - llvmlite==0.45.1
 - lovely-jax==0.1.4
 - lovely-numpy==0.2.17
 - lxml==6.0.2
 - mako==1.3.10
 - markdown==3.9
 - markupsafe==3.0.3
 - matplotlib-inline==0.2.1
 - mda-xdrlib==0.2.0
 - mdanalysis==2.10.0
 - mmtf-python==1.1.3
 - molzip==0.9.2
 - monty==2025.3.3
 - mrcfile==1.5.4
 - namex==0.1.0
 - narwhals==2.10.1
 - nbformat==5.10.4
 - networkx==3.5
 - numba==0.62.1
 - nvidia-cufile-cu12==1.13.1.3
 - nvidia-curand-cu12==10.3.9.90
 - nvidia-cusparselt-cu12==0.7.1
 - nvidia-nvtx-cu12==12.8.90
 - optree==0.17.0
 - optuna==2.10.1
 - orjson==3.11.4
 - palettable==3.3.3
 - pandas-flavor==0.7.0
 - parso==0.8.5
 - pexpect==4.9.0
 - platformdirs==4.5.0
 - plotly==6.3.1
 - plumbum==1.6.2
 - polars==1.35.1
 - polars-runtime-32==1.35.1
 - prettytable==3.16.0
 - prompt-toolkit==3.0.52
 - ptyprocess==0.7.0
 - pubchempy==1.0.5
 - pure-eval==0.2.3
 - py3dmol==2.5.3
 - pyarrow==22.0.0
 - pydantic==2.12.3
 - pydantic-core==2.41.4
 - pymatgen==2025.10.7
 - pyocse==0.1.2
 - pyperclip==1.11.0
 - pyscf==2.11.0
 - pyscf-dispersion==1.3.0
 - python-json-logger==2.0.7
 - pythreejs==2.4.2
 - pyvolume==0.1.2
 - pyxtal==1.1.1
 - pyzmq==27.1.0
 - rdkit==2025.9.1
 - referencing==0.37.0
 - regex==2025.10.23
 - requests==2.32.5
 - rich-argparse==1.7.2
 - rpds-py==0.28.0
 - ruamel-yaml==0.18.16
 - ruamel-yaml-clib==0.2.14
 - scienceplots==2.1.1
 - scikit-learn==1.7.2
 - selfies==2.2.0
 - sentry-sdk==2.43.0
 - setuptools==80.9.0
 - smmap==5.0.2
 - sortedcontainers==2.4.0
 - sparse==0.17.0
 - spglib==2.6.0
 - sphynx==0.0.3
 - sqlalchemy==2.0.44
 - stack-data==0.6.3
 - stevedore==5.5.0
 - structlog==21.5.0
 - tensorboard==2.20.0
 - tensorboard-data-server==0.7.2
 - tensorflow==2.20.0
 - termcolor==3.2.0
 - threadpoolctl==3.6.0
 - toml==0.10.2
 - torch==2.9.0
 - torchani==2.2.4
 - tornado==6.5.2
 - traitlets==5.14.3
 - traittypes==0.2.3
 - triton==3.5.0
 - typing-inspection==0.4.2
 - uncertainties==3.2.3
 - unidecode==1.4.0
 - urllib3==2.5.0
 - vasprun-xml==1.0.4
 - wandb==0.22.3
 - wcwidth==0.2.14
 - werkzeug==3.1.3
 - wheel==0.45.1
 - widgetsnbextension==4.0.14
 - wrapt==2.0.0
 - xarray==2025.10.1
 - xmltodict==1.0.2
ERROR:2025-11-01 12:37:54,642:jax._src.xla_bridge:473: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 471, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 285, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: CUDA_ERROR_NOT_INITIALIZED
WARNING:2025-11-01 12:37:54,647:jax._src.xla_bridge:850: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
CUDA_VISIBLE_DEVICES = 0
JAX backend: cpu
Devices: [CpuDevice(id=0)]
jax = 0.8.0 jaxlib = 0.8.0
jaxlib CUDA = unknown
/scicore/home/meuwly/boitti0000/mmml/.venv/bin/python
lovely_jax not available, using standard JAX array printing
[2025-11-01 12:37:58,015][__main__][INFO] - Configuration:
[2025-11-01 12:37:58,018][__main__][INFO] - model:
  name: MessagePassingModel
  features: 128
  max_degree: 2
  num_iterations: 2
  num_basis_functions: 32
  cutoff: 8.0
  n_dcm: 4
  include_pseudotensors: false
data:
  paths:
  - /home/ericb/testmmml/test.npz
  - /pchem-data/meuwly/boittier/home/test.npz
  - /scicore/home/meuwly/boitti0000/test.npz
  num_train: 1000
  num_valid: 100
  natoms: 18
  esp_sample_size: 1000
  esp_clip_min: -2.0
  esp_clip_max: 2.0
  esp_to_au: 0.0016
  clean: false
  esp_mask: false
  clip_esp: false
  monopole_H: 0.1
  monopole_O: -0.2
training:
  num_epochs: 50
  learning_rate: 0.0001
  batch_size: 1
  n_bootstrap: 10
  esp_weight_schedule: linear
  esp_weight_start: 1000.0
  esp_weight_end: 10000.0
  chg_weight_schedule: inverse
  chg_weight_start: 1.0
  chg_weight_end: 0.1
  use_grad_clip: true
  grad_clip_norm: 1000.0
  restart_from_checkpoint: null
seed: 42
device:
  mem_fraction: 0.95
  cuda_visible_devices: '0'
output_dir: outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
wandb:
  enabled: false
  project: dcmnet-training
  entity: null

ERROR:2025-11-01 12:37:58,216:jax._src.xla_bridge:473: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 471, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 285, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: CUDA_ERROR_NOT_INITIALIZED
[2025-11-01 12:37:58,216][jax._src.xla_bridge][ERROR] - Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 471, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 328, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/scicore/home/meuwly/boitti0000/mmml/.venv/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 285, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: CUDA_ERROR_NOT_INITIALIZED
INFO:2025-11-01 12:37:58,222:jax._src.xla_bridge:808: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory
[2025-11-01 12:37:58,222][jax._src.xla_bridge][INFO] - Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory
WARNING:2025-11-01 12:37:58,222:jax._src.xla_bridge:850: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
[2025-11-01 12:37:58,222][jax._src.xla_bridge][WARNING] - An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.
[2025-11-01 12:37:58,222][__main__][INFO] - JAX devices: [CpuDevice(id=0)]
[2025-11-01 12:37:58,222][__main__][INFO] - JAX backend: cpu
[2025-11-01 12:37:58,223][__main__][INFO] - Created model with 4 DCM components
[2025-11-01 12:37:58,292][__main__][INFO] - 
============================================================
[2025-11-01 12:37:58,292][__main__][INFO] - Bootstrap iteration 1/10
[2025-11-01 12:37:58,292][__main__][INFO] - ============================================================
[2025-11-01 12:37:58,292][__main__][INFO] - Preparing datasets...
shape (1983, 18, 3)
⚠️  No 'mono' field found in dataset
   Creating zero charges for 1983 molecules × 18 atoms
   Note: Q field (if present) is quadrupole, not monopole charges
   D field: molecular dipole vector (shape: (1983, 3))
   Q field: quadrupole tensor (3×3, shape: (1983, 3, 3))
R (1983, 18, 3)
(1983, 18, 3)
['R', 'Z', 'F', 'mono', 'esp', 'vdw_surface', 'n_grid', 'D', 'Q', 'esp_grid']
1983
0 R 1983 (1983, 18, 3)
1 Z 1983 (1983, 18)
2 F 1983 (1983, 18, 3)
3 mono 1983 (1983, 18)
4 esp 1983 (1983, 44510)
5 vdw_surface 1983 (1983, 44510, 3)
6 n_grid 1983 (1983, 1)
7 D 1983 (1983, 3)
8 Q 1983 (1983, 3, 3)
9 esp_grid 1983 (1983, 44510, 3)

Batch information:
  mono: (1, 18)
  esp: (1, 1000)
  vdw_surface: (1, 1000, 3)
  n_grid: (1,)
  N: (1,)
  R: (1, 18, 3)
  Z: (1, 18)

  mono values (first molecule): [-0.2  0.1  0.1 -0.2  0.1  0.1  0.   0.   0.   0.   0.   0.   0.   0.
  0.   0.   0.   0. ]
  N values: [6]
  n_grid values: [1000]
[2025-11-01 12:38:12,197][__main__][INFO] - Loss weights - ESP: 1900.00, Charge: 1.0000
[2025-11-01 12:38:12,199][__main__][INFO] - Training for 50 epochs...
